--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,305 @@
-.root { position: relative; width: 320px; height: 521px; overflow: hidden; margin: auto; border-radius: 45px; border: 16px solid #a8c5c1; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-box-shadow: 7px 8px 3px -1px black; box-shadow: 7px 8px 3px -1px black; }
+.root {
+  position: relative;
+  width: 320px;
+  height: 521px;
+  overflow: hidden;
+  margin: auto;
+  border-radius: 45px;
+  border: 16px solid #666;
+  box-sizing: border-box;
+  box-shadow: 7px 8px 3px -1px rgb(0, 0, 0);
+}
+.root .header {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  padding-top: 10px;
+  text-align: center;
+}
+.root .header .banner {
+  opacity: 0.4;
+}
+.root .header .banner .title {
+  margin-top: 8px;
+  text-shadow: 3px 3px 1px #312f3f;
+  font-family: "Faster One", cursive;
+  font-size: 3.5rem;
+  line-height: 2.7rem;
+  color: #e93030;
+}
+.root .header .banner .title:nth-child(1) {
+  color: #4782da;
+  font-size: 4rem;
+}
+.root .header .info {
+  position: absolute;
+  bottom: 6px;
+  left: 6px;
+  right: 6px;
+  padding: 6px 0 0px;
+  text-align: center;
+  background: rgba(15, 75, 3, 0.7411764706);
+  border-radius: 25% 25% 23px 23px;
+  border-top: 2px solid #38ec13;
+  color: #38ec13;
+  text-shadow: 0 0 3px #38ec13;
+  font-size: 0.9em;
+  line-height: 1em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.root .header .info p {
+  font-family: monospace;
+  display: inline-block;
+}
+.root .header .info p span {
+  display: block;
+}
+.root .main {
+  position: absolute;
+  display: block;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 7;
+}
+.root .main .select {
+  margin: 130px auto 0;
+  padding: 11px 0;
+  width: 200px;
+  height: auto;
+  border-radius: 30px;
+  text-align: center;
+  box-shadow: 3px 3px 3px -1px #07070a;
+  border: 2px outset #636364;
+  background: #48474e;
+}
+.root .main .select a.button {
+  border-radius: 15px;
+  box-shadow: 2px 2px 2px -1px #07070a;
+  display: block;
+  padding: 4px 3px 3px;
+  width: 115px;
+  border: 2px solid #5f5f61;
+  color: #8dc9ce;
+  text-shadow: 0 0 5px #38ec13;
+  border-width: 2px 0 0 2px;
+  border-style: solid;
+  margin: 10px auto;
+  background: rgb(102, 102, 102);
+  line-height: 30px;
+  font-size: 26px;
+  cursor: pointer;
+  border-style: inset;
+}
+.root .main a.button.active,
+.root .main a.button:active {
+  padding: 1px 2px 2px 4px;
+  box-shadow: 0 0 1px 0px black;
+  color: #38ec13;
+  background: #23532d;
+  border-color: black;
+}
+.root .road {
+  position: relative;
+  height: 100%;
+  background-color: rgb(68, 68, 77);
+  padding-left: 56px;
+  background-image: linear-gradient(to left, #222222 0, #313235 30%, #45444b 60%, #696969 100%);
+}
+.root .road .track {
+  box-sizing: border-box;
+  height: 200%;
+  border-left: 15px double white;
+  border-right: 15px solid white;
+  opacity: 0.9;
+}
+.root .road .track::after {
+  box-sizing: border-box;
+  content: "";
+  display: block;
+  border-right: 15px dashed white;
+  width: 55%;
+  height: 100%;
+}
+.root .road .player,
+.root .road .opponent {
+  position: absolute;
+  bottom: 15%;
+  left: 0;
+  width: 100%;
+  top: 15%;
+}
+.root .road .player .car,
+.root .road .opponent .car {
+  position: absolute;
+  left: calc(50% - 17.5px - 130px);
+  bottom: calc(50% - 44.5px);
+  width: 35px;
+  height: 89px;
+  transform-origin: top center;
+  z-index: 1;
+  border-radius: 12px;
+  box-shadow: -2px 1px 2px 0px black;
+  background-size: 100%;
+}
+.root .road .player .car {
+  background-image: url(../assets/img/p_car.png);
+}
+.root .road .opponent .car {
+  background-image: url(../assets/img/o_car.png);
+}
+.root .road .opponent .car:first-child {
+  top: calc(50% + 46.5px);
+  transform: scaleY(-1);
+}
+.root .footer {
+  z-index: 8;
+  position: absolute;
+  bottom: 13%;
+  width: 100%;
+  height: 10%;
+}
+.root .footer .interface {
+  position: relative;
+  margin: 0 auto;
+}
+.root .footer .interface__steer {
+  font-family: "Courier New", Courier, monospace;
+  width: 45px;
+  height: 45px;
+  border: none;
+  z-index: 8;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 50%;
+  border: 3px solid rgba(56, 236, 19, 0.7411764706);
+  background: rgba(45, 112, 32, 0.7607843137);
+}
+.root .footer .interface__steer span {
+  -webkit-user-select: inherit;
+     -moz-user-select: inherit;
+      -ms-user-select: inherit;
+          user-select: inherit;
+  background: rgba(56, 236, 19, 0.7411764706);
+  color: none;
+  height: 100%;
+  display: block;
+}
+.root .footer .interface__steer span:hover {
+  cursor: pointer;
+  background: white;
+  color: none;
+  height: 100%;
+  display: block;
+}
+.root .footer .interface__steer--left {
+  left: 12px;
+}
+.root .footer .interface__steer--left span {
+  -webkit-clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
+          clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
+}
+.root .footer .interface__steer--right {
+  left: 80px;
+}
+.root .footer .interface__steer--right span {
+  -webkit-clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
+          clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
+}
+.root .footer .interface__steer--brake {
+  left: calc(100% - 58px);
+}
+.root .footer .interface__steer--brake span {
+  -webkit-clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
+          clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
+  background: #df0d0d;
+}
+.root .hide {
+  display: none;
+}
+.root::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  border: 7px solid rgb(7, 13, 15);
+  box-sizing: border-box;
+  border-radius: 30px;
+  background: radial-gradient(circle at center, rgba(255, 255, 255, 0) 75%, rgb(0, 0, 0) 100%);
+}
 
-.root .header { position: absolute; height: 100%; top: 0; left: 0; right: 0; z-index: 2; padding-top: 10px; text-align: center; }
+@media (min-width: 320px) and (max-width: 1024px) {
+  .root {
+    margin: 0 auto;
+  }
+}
+@font-face {
+  font-family: "Faster One";
+  src: url("../assets/fonts/FasterOne-Regular.ttf") format("embedded-opentype"), url("../assets/fonts/FasterOne-Regular.woff2") format("woff2"), url("../assets/fonts/FasterOne-Regular.woff") format("woff"), url("../assets/fonts/FasterOne-Regular.ttf") format("truetype"), url("../assets/fonts/FasterOne-Regular.ttf") format("svg");
+  /* Legacy iOS */
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
 
-.root .header .banner { opacity: 0.4; }
+body {
+  display: flex;
+  height: 100vh;
+  box-sizing: inherit;
+  background: radial-gradient(circle at center, rgb(38, 30, 116) 0%, rgb(21, 66, 56) 100%), url(../assets/img/bcg.jpg);
+  background-size: cover;
+  background-position: right;
+  background-blend-mode: screen;
+  overflow: hidden;
+}
+body:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  box-sizing: border-box;
+  background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 40%, rgb(27, 27, 27) 100%);
+}
 
-.root .header .banner .title { margin-top: 8px; text-shadow: 3px 3px 1px #312f3f; font-family: "Faster One", cursive; font-size: 3.5rem; line-height: 2.7rem; color: #e93030; }
+.arrows {
+  color: black;
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  color: blanchedalmond;
+  background: rgb(0, 0, 0);
+}
 
-.root .header .banner .title:nth-child(1) { color: #4782da; font-size: 4rem; }
-
-.root .header .info { position: absolute; bottom: 6px; left: 6px; right: 6px; padding: 6px 0 0px; text-align: center; background: #0f4b03bd; border-radius: 25% 25% 23px 23px; border-top: 2px solid #38ec13; color: #38ec13; text-shadow: 0 0 3px #38ec13; font-size: 0.9em; line-height: 1em; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
-
-.root .header .info p { font-family: monospace; display: inline-block; }
-
-.root .header .info p span { display: block; }
-
-.root .main { position: absolute; display: block; height: 100%; top: 0; left: 0; right: 0; z-index: 7; }
-
-.root .main .select { margin: 140px auto 0; padding: 11px 0; width: 200px; height: auto; border-radius: 30px; background: #1b3655b9; text-align: center; -webkit-box-shadow: 3px 3px 3px -1px #07070a; box-shadow: 3px 3px 3px -1px #07070a; }
-
-.root .main .select a.button { border-radius: 15px; -webkit-box-shadow: 2px 2px 2px -1px #07070a; box-shadow: 2px 2px 2px -1px #07070a; display: block; padding: 0px 3px 3px; width: 115px; border: 2px solid #469eb4; color: #8dc9ce; text-shadow: 0 0 5px #38ec13; border-width: 2px 0 0 2px; border-style: solid; margin: 10px auto; background: #346666b6; line-height: 30px; font-size: 26px; cursor: pointer; }
-
-.root .main a.button.active, .root .main a.button:active { padding: 1px 2px 2px 4px; -webkit-box-shadow: 0 0 1px 0px black; box-shadow: 0 0 1px 0px black; color: #38ec13; background: #23532d; border-color: black; }
-
-.root .road { position: relative; height: 100%; background-color: #44444d; padding-left: 56px; background-image: -webkit-gradient(linear, right top, left top, color-stop(0, #222222), color-stop(30%, #313235), color-stop(60%, #45444b), to(#696969)); background-image: linear-gradient(to left, #222222 0, #313235 30%, #45444b 60%, #696969 100%); }
-
-.root .road .track { -webkit-box-sizing: border-box; box-sizing: border-box; height: 200%; border-left: 15px double white; border-right: 15px solid white; opacity: 0.9; }
-
-.root .road .track::after { -webkit-box-sizing: border-box; box-sizing: border-box; content: ""; display: block; border-right: 15px dashed white; width: 55%; height: 100%; }
-
-.root .road .player, .root .road .opponent { position: absolute; bottom: 15%; left: 0; width: 100%; top: 15%; }
-
-.root .road .player .car, .root .road .opponent .car { position: absolute; left: calc((50% - 17.5px) - 130px); bottom: calc(50% - 44.5px); width: 35px; height: 89px; -webkit-transform-origin: top center; transform-origin: top center; z-index: 1; border-radius: 12px; -webkit-box-shadow: -2px 1px 2px 0px black; box-shadow: -2px 1px 2px 0px black; background-size: 100%; }
-
-.root .road .player .car { background-image: url(../assets/img/p_car.png); }
-
-.root .road .opponent .car { background-image: url(../assets/img/o_car.png); }
-
-.root .road .opponent .car:first-child { top: calc(50% + 46.5px); -webkit-transform: scaleY(-1); transform: scaleY(-1); }
-
-.root .footer { z-index: 8; position: absolute; bottom: 13%; width: 100%; height: 10%; }
-
-.root .footer .interface { position: relative; margin: 0 auto; }
-
-.root .footer .interface__steer { font-family: "Courier New", Courier, monospace; width: 45px; height: 45px; border: none; z-index: 8; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; position: absolute; left: 0; top: 0; border-radius: 50%; border: 3px solid #38ec13bd; background: #2d7020c2; }
-
-.root .footer .interface__steer span { -webkit-user-select: inherit; -moz-user-select: inherit; -ms-user-select: inherit; user-select: inherit; background: #38ec13bd; color: none; height: 100%; display: block; }
-
-.root .footer .interface__steer span:hover { cursor: pointer; background: white; color: none; height: 100%; display: block; }
-
-.root .footer .interface__steer--left { left: 12px; }
-
-.root .footer .interface__steer--left span { -webkit-clip-path: polygon(80% 20%, 80% 80%, 10% 50%); clip-path: polygon(80% 20%, 80% 80%, 10% 50%); }
-
-.root .footer .interface__steer--right { left: 80px; }
-
-.root .footer .interface__steer--right span { -webkit-clip-path: polygon(20% 20%, 20% 80%, 90% 50%); clip-path: polygon(20% 20%, 20% 80%, 90% 50%); }
-
-.root .footer .interface__steer--brake { left: calc(100% - 58px); }
-
-.root .footer .interface__steer--brake span { -webkit-clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%); clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%); background: #df0d0d; }
-
-.root .hide { display: none; }
-
-.root::after { content: ""; position: absolute; display: block; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; border: 7px solid #070d0f; -webkit-box-sizing: border-box; box-sizing: border-box; border-radius: 30px; background: radial-gradient(circle at center, rgba(255, 255, 255, 0) 75%, black 100%); }
-
-@media (min-width: 320px) and (max-width: 1024px) { .root { margin: 0 auto; } }
-
-@font-face { font-family: 'Faster One'; src: url("../assets/fonts/FasterOne-Regular.ttf") format("embedded-opentype"), url("../assets/fonts/FasterOne-Regular.woff2") format("woff2"), url("../assets/fonts/FasterOne-Regular.woff") format("woff"), url("../assets/fonts/FasterOne-Regular.ttf") format("truetype"), url("../assets/fonts/FasterOne-Regular.ttf") format("svg"); /* Legacy iOS */ font-weight: normal; font-style: normal; font-display: swap; }
-
-* { -webkit-box-sizing: border-box; box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
-
-body { display: -webkit-box; display: -ms-flexbox; display: flex; height: 100vh; -webkit-box-sizing: inherit; box-sizing: inherit; background: radial-gradient(circle at center, #261e74 0%, #154238 100%), url(../assets/img/bcg.jpg); background-size: cover; background-position: right; background-blend-mode: screen; overflow: hidden; }
-
-body:after { content: ""; position: absolute; display: block; width: 100vw; height: 100vh; z-index: -1; -webkit-box-sizing: border-box; box-sizing: border-box; background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 40%, #1b1b1b 100%); }
-
-.arrows { color: black; position: absolute; display: block; bottom: 0; left: 0; text-align: center; width: 100%; color: blanchedalmond; background: black; }
-
-@media (min-width: 320px) and (max-width: 1024px) { .arrows { display: none; } }
-/*# sourceMappingURL=style.css.map */
+@media (min-width: 320px) and (max-width: 1024px) {
+  .arrows {
+    display: none;
+  }
+}/*# sourceMappingURL=style.css.map */
