--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
   margin: auto;
   border-radius: 45px;
-  border: 16px solid #a8c5c1;
+  border: 16px solid #666;
   box-sizing: border-box;
   box-shadow: 7px 8px 3px -1px rgb(0, 0, 0);
 
