--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   overflow: hidden;
   margin: auto;
   border-radius: 45px;
-  border: 16px solid #666;
+  border: 16px solid rgba(185, 163, 149, 0.7215686275);
   box-sizing: border-box;
   box-shadow: 7px 8px 3px -1px rgb(0, 0, 0);
 }
@@ -28,10 +28,10 @@
   font-family: "Faster One", cursive;
   font-size: 3.5rem;
   line-height: 2.7rem;
-  color: #e93030;
+  color: #b05555;
 }
 .root .header .banner .title:nth-child(1) {
-  color: #4782da;
+  color: #537ca0;
   font-size: 4rem;
 }
 .root .header .info {
@@ -49,6 +49,8 @@
   font-size: 0.9em;
   line-height: 1em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 .root .header .info p {
   font-family: monospace;
@@ -75,29 +77,25 @@
   text-align: center;
   box-shadow: 3px 3px 3px -1px #07070a;
   border: 2px outset #636364;
-  background: #48474e;
+  background: rgba(151, 183, 188, 0.2392156863);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
 }
-.root .main .select a.button {
+.root .main a.button {
   border-radius: 15px;
   box-shadow: 2px 2px 2px -1px #07070a;
   display: block;
   padding: 4px 3px 3px;
   width: 115px;
-  border: 2px solid #5f5f61;
-  color: #8dc9ce;
-  text-shadow: 0 0 5px #38ec13;
-  border-width: 2px 0 0 2px;
-  border-style: solid;
+  color: #bed4d0;
   margin: 10px auto;
   background: rgb(102, 102, 102);
   line-height: 30px;
   font-size: 26px;
   cursor: pointer;
-  border-style: inset;
 }
 .root .main a.button.active,
 .root .main a.button:active {
-  padding: 5px 2px 2px 4px;
   box-shadow: 0 0 1px 0px black;
   color: #38ec13;
   background: #23532d;
@@ -156,73 +154,6 @@
   top: calc(50% + 46.5px);
   transform: scaleY(-1);
 }
-.root .footer {
-  z-index: 8;
-  position: absolute;
-  bottom: 13%;
-  width: 100%;
-  height: 10%;
-}
-.root .footer .interface {
-  position: relative;
-  margin: 0 auto;
-}
-.root .footer .interface__steer {
-  font-family: "Courier New", Courier, monospace;
-  width: 45px;
-  height: 45px;
-  border: none;
-  z-index: 8;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  border-radius: 50%;
-  border: 3px solid rgba(56, 236, 19, 0.7411764706);
-  background: rgba(45, 112, 32, 0.7607843137);
-}
-.root .footer .interface__steer span {
-  -webkit-user-select: inherit;
-     -moz-user-select: inherit;
-      -ms-user-select: inherit;
-          user-select: inherit;
-  background: rgba(56, 236, 19, 0.7411764706);
-  color: none;
-  height: 100%;
-  display: block;
-}
-.root .footer .interface__steer span:hover {
-  cursor: pointer;
-  background: white;
-  color: none;
-  height: 100%;
-  display: block;
-}
-.root .footer .interface__steer--left {
-  left: 12px;
-}
-.root .footer .interface__steer--left span {
-  -webkit-clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
-          clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
-}
-.root .footer .interface__steer--right {
-  left: 80px;
-}
-.root .footer .interface__steer--right span {
-  -webkit-clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
-          clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
-}
-.root .footer .interface__steer--brake {
-  left: calc(100% - 58px);
-}
-.root .footer .interface__steer--brake span {
-  -webkit-clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
-          clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
-  background: #df0d0d;
-}
 .root .hide {
   display: none;
 }
@@ -242,6 +173,71 @@
 }
 
 @media (min-width: 320px) and (max-width: 1024px) {
+  .footer {
+    z-index: 8;
+    position: absolute;
+    bottom: 13%;
+    width: 100%;
+    height: 10%;
+  }
+  .footer .interface {
+    position: relative;
+    margin: 0 auto;
+  }
+  .footer .interface__steer {
+    font-family: "Courier New", Courier, monospace;
+    width: 45px;
+    height: 45px;
+    border: none;
+    z-index: 8;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 50%;
+    border: 3px solid rgba(56, 236, 19, 0.7411764706);
+    background: rgba(45, 112, 32, 0.7607843137);
+  }
+  .footer .interface__steer span {
+    -webkit-user-select: inherit;
+       -moz-user-select: inherit;
+            user-select: inherit;
+    background: rgba(56, 236, 19, 0.7411764706);
+    color: none;
+    height: 100%;
+    display: block;
+  }
+  .footer .interface__steer span:hover {
+    cursor: pointer;
+    background: white;
+    color: none;
+    height: 100%;
+    display: block;
+  }
+  .footer .interface__steer--left {
+    left: 12px;
+  }
+  .footer .interface__steer--left span {
+    -webkit-clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
+            clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
+  }
+  .footer .interface__steer--right {
+    left: 80px;
+  }
+  .footer .interface__steer--right span {
+    -webkit-clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
+            clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
+  }
+  .footer .interface__steer--brake {
+    left: calc(100% - 58px);
+  }
+  .footer .interface__steer--brake span {
+    -webkit-clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
+            clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
+    background: #df0d0d;
+  }
   .root {
     margin: 0 auto;
   }
@@ -261,7 +257,6 @@
   font-family: Arial, Helvetica, sans-serif;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 
@@ -302,4 +297,4 @@ body:after {
   .arrows {
     display: none;
   }
-}/*# sourceMappingURL=style.css.map */
+}
