--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,10 +15,10 @@
         font-family: "Faster One", cursive;
         font-size: 3.5rem;
         line-height: 2.7rem;
-        color: #e93030;
+        color: #b05555;
       }
       .title:nth-child(1) {
-        color: #4782da;
+        color: #537ca0;
         font-size: 4rem;
       }
     }
@@ -38,6 +38,7 @@
       line-height: 1em;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        backdrop-filter: blur(3px);
       p {
         font-family: monospace;
         display: inline-block;
