--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,50 +1,50 @@
 .header {
-    position: absolute;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    padding-top: 10px;
-    text-align: center;
-    .banner {
-      opacity: 0.4;
-      .title {
-        margin-top: 8px;
-        text-shadow: 3px 3px 1px #312f3f;
-        font-family: "Faster One", cursive;
-        font-size: 3.5rem;
-        line-height: 2.7rem;
-        color: #b05555;
-      }
-      .title:nth-child(1) {
-        color: #537ca0;
-        font-size: 4rem;
-      }
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  padding-top: 10px;
+  text-align: center;
+  .banner {
+    opacity: 0.4;
+    .title {
+      margin-top: 8px;
+      text-shadow: 3px 3px 1px #312f3f;
+      font-family: "Faster One", cursive;
+      font-size: 3.5rem;
+      line-height: 2.7rem;
+      color: #c60e0e;
     }
-    .info {
-      position: absolute;
-      bottom: 6px;
-      left: 6px;
-      right: 6px;
-      padding: 6px 0 0px;
-      text-align: center;
-      background: #0f4b03bd;
-      border-radius: 25% 25% 23px 23px;
-      border-top: 2px solid #38ec13;
-      color: #38ec13;
-      text-shadow: 0 0 3px #38ec13;
-      font-size: 0.9em;
-      line-height: 1em;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        backdrop-filter: blur(3px);
-      p {
-        font-family: monospace;
-        display: inline-block;
-        span {
-          display: block;
-        }
+    .title:nth-child(1) {
+      color: #1372c5;
+      font-size: 4rem;
+    }
+  }
+  .info {
+    position: absolute;
+    bottom: 6px;
+    left: 6px;
+    right: 6px;
+    padding: 6px 0 2px;
+    text-align: center;
+    background: #0f4b03bd;
+    border-radius: 25% 25% 23px 23px;
+    border-top: 2px solid #15b536;
+    color: #c2e6bb;
+    text-shadow: 0 0 1px #13ec72;
+    font-size: 0.9em;
+    line-height: 1em;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
+    backdrop-filter: blur(3px);
+    p {
+      font-family: monospace;
+      display: inline-block;
+      span {
+        display: block;
       }
     }
   }
+}
