--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,10 +8,10 @@
   padding-top: 10px;
   text-align: center;
   .banner {
-    opacity: 0.4;
+    opacity: 1;
     .title {
-      margin-top: 8px;
-      text-shadow: 3px 3px 1px #312f3f;
+      margin-top: 1.67vh;
+      text-shadow: 1px 1px 3px #000000;
       font-family: "Faster One", cursive;
       font-size: 3.5rem;
       line-height: 2.7rem;
