--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@
   text-align: center;
 }
 .root .header .banner {
-  opacity: 0.4;
+  opacity: 1;
 }
 .root .header .banner .title {
-  margin-top: 8px;
-  text-shadow: 3px 3px 1px #312f3f;
+  margin-top: 1.67vh;
+  text-shadow: 1px 1px 3px #000000;
   font-family: "Faster One", cursive;
   font-size: 3.5rem;
   line-height: 2.7rem;
@@ -69,7 +69,7 @@
   z-index: 7;
 }
 .root .main .select {
-  margin: 134px auto 0;
+  margin: 18.2vh auto 0;
   padding: 11px 0;
   height: auto;
   text-align: center;
