--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -8,7 +8,7 @@
   z-index: 7;
 
   .select {
-    margin: 134px auto 0;
+    margin: 18.2vh auto 0;
     padding: 11px 0;
     height: auto;
     text-align: center;
