--- a/css/style.css
+++ b/css/style.css
@@ -1,300 +1,1 @@
-.root {
-  position: relative;
-  width: 320px;
-  height: 521px;
-  overflow: hidden;
-  margin: auto;
-  border-radius: 45px;
-  border: 16px solid rgba(185, 163, 149, 0.7215686275);
-  box-sizing: border-box;
-  box-shadow: 7px 8px 3px -1px rgb(0, 0, 0);
-}
-.root .header {
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  padding-top: 10px;
-  text-align: center;
-}
-.root .header .banner {
-  opacity: 1;
-}
-.root .header .banner .title {
-  margin-top: 1.67vh;
-  text-shadow: 1px 1px 3px #000000;
-  font-family: "Faster One", cursive;
-  font-size: 3.5rem;
-  line-height: 2.7rem;
-  color: #c60e0e;
-}
-.root .header .banner .title:nth-child(1) {
-  color: #1372c5;
-  font-size: 4rem;
-}
-.root .header .info {
-  position: absolute;
-  bottom: 6px;
-  left: 6px;
-  right: 6px;
-  padding: 6px 0 2px;
-  text-align: center;
-  background: rgba(15, 75, 3, 0.7411764706);
-  border-radius: 25% 25% 23px 23px;
-  border-top: 2px solid #15b536;
-  color: #c2e6bb;
-  text-shadow: 0 0 1px #13ec72;
-  font-size: 0.9em;
-  line-height: 1em;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-}
-.root .header .info p {
-  font-family: monospace;
-  display: inline-block;
-}
-.root .header .info p span {
-  display: block;
-}
-.root .main {
-  position: absolute;
-  display: block;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 7;
-}
-.root .main .select {
-  margin: 18.2vh auto 0;
-  padding: 11px 0;
-  height: auto;
-  text-align: center;
-  box-shadow: 3px 3px 3px -1px #07070a;
-  border: 2px outset #636364;
-  background: rgba(182, 188, 151, 0.02);
-  -webkit-backdrop-filter: blur(4px);
-          backdrop-filter: blur(4px);
-}
-.root .main a.button {
-  border-radius: 15px;
-  box-shadow: 2px 2px 2px -1px #07070a;
-  display: block;
-  padding: 4px 3px 3px;
-  width: 115px;
-  color: #f2dfb3;
-  margin: 10px auto;
-  background: rgb(102, 102, 102);
-  line-height: 30px;
-  font-size: 1.4em;
-  cursor: pointer;
-}
-.root .main a.button.active,
-.root .main a.button:active {
-  box-shadow: 0 0 1px 0px black;
-  color: #38ec13;
-  background: #23532d;
-  border-color: black;
-}
-.root .road {
-  position: relative;
-  height: 100%;
-  background-color: rgb(68, 68, 77);
-  padding-left: 56px;
-  background-image: linear-gradient(to left, #222222 0, #313235 30%, #45444b 60%, #696969 100%);
-}
-.root .road .track {
-  box-sizing: border-box;
-  height: 200%;
-  border-left: 15px double white;
-  border-right: 15px solid white;
-  opacity: 0.9;
-}
-.root .road .track::after {
-  box-sizing: border-box;
-  content: "";
-  display: block;
-  border-right: 15px dashed white;
-  width: 55%;
-  height: 100%;
-}
-.root .road .player,
-.root .road .opponent {
-  position: absolute;
-  bottom: 15%;
-  left: 0;
-  width: 100%;
-  top: 15%;
-}
-.root .road .player .car,
-.root .road .opponent .car {
-  position: absolute;
-  left: calc(50% - 17.5px - 130px);
-  bottom: calc(50% - 44.5px);
-  width: 35px;
-  height: 89px;
-  transform-origin: top center;
-  z-index: 1;
-  border-radius: 12px;
-  box-shadow: -2px 1px 2px 0px black;
-  background-size: 100%;
-}
-.root .road .player .car {
-  background-image: url(../assets/img/p_car.png);
-}
-.root .road .opponent .car {
-  background-image: url(../assets/img/o_car.png);
-}
-.root .road .opponent .car:first-child {
-  top: calc(50% + 46.5px);
-  transform: scaleY(-1);
-}
-.root .hide {
-  display: none;
-}
-.root::after {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  border: 7px solid rgb(7, 13, 15);
-  box-sizing: border-box;
-  border-radius: 30px;
-  background: radial-gradient(circle at center, rgba(255, 255, 255, 0) 75%, rgb(0, 0, 0) 100%);
-}
-
-@media (min-width: 320px) and (max-width: 1024px) {
-  .footer {
-    z-index: 8;
-    position: absolute;
-    bottom: 13%;
-    width: 100%;
-    height: 10%;
-  }
-  .footer .interface {
-    position: relative;
-    margin: 0 auto;
-  }
-  .footer .interface__steer {
-    font-family: "Courier New", Courier, monospace;
-    width: 45px;
-    height: 45px;
-    border: none;
-    z-index: 8;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-            user-select: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: 50%;
-    border: 3px solid rgba(56, 236, 19, 0.7411764706);
-    background: rgba(45, 112, 32, 0.7607843137);
-  }
-  .footer .interface__steer span {
-    -webkit-user-select: inherit;
-       -moz-user-select: inherit;
-            user-select: inherit;
-    background: rgba(56, 236, 19, 0.7411764706);
-    color: none;
-    height: 100%;
-    display: block;
-  }
-  .footer .interface__steer span:hover {
-    cursor: pointer;
-    background: white;
-    color: none;
-    height: 100%;
-    display: block;
-  }
-  .footer .interface__steer--left {
-    left: 12px;
-  }
-  .footer .interface__steer--left span {
-    -webkit-clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
-            clip-path: polygon(80% 20%, 80% 80%, 10% 50%);
-  }
-  .footer .interface__steer--right {
-    left: 80px;
-  }
-  .footer .interface__steer--right span {
-    -webkit-clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
-            clip-path: polygon(20% 20%, 20% 80%, 90% 50%);
-  }
-  .footer .interface__steer--brake {
-    left: calc(100% - 58px);
-  }
-  .footer .interface__steer--brake span {
-    -webkit-clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
-            clip-path: polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);
-    background: #df0d0d;
-  }
-  .root {
-    margin: 0 auto;
-  }
-}
-@font-face {
-  font-family: "Faster One";
-  src: url("../assets/fonts/FasterOne-Regular.ttf") format("embedded-opentype"), url("../assets/fonts/FasterOne-Regular.woff2") format("woff2"), url("../assets/fonts/FasterOne-Regular.woff") format("woff"), url("../assets/fonts/FasterOne-Regular.ttf") format("truetype"), url("../assets/fonts/FasterOne-Regular.ttf") format("svg");
-  /* Legacy iOS */
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-
-body {
-  display: flex;
-  height: 100vh;
-  box-sizing: inherit;
-  background: radial-gradient(circle at center, rgb(41, 51, 58) 0%, rgb(21, 49, 66) 100%), url(../assets/img/bcg.jpg);
-  background-size: cover;
-  background-position: right;
-  background-blend-mode: saturation;
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-  overflow: hidden;
-}
-body:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  box-sizing: border-box;
-  background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 40%, rgb(27, 27, 27) 100%);
-}
-
-.arrows {
-  color: black;
-  position: absolute;
-  display: block;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  width: 100%;
-  color: blanchedalmond;
-  background: rgb(0, 0, 0);
-}
-
-@media (min-width: 320px) and (max-width: 1024px) {
-  .arrows {
-    display: none;
-  }
-}
+.root{position:relative;width:320px;height:521px;overflow:hidden;margin:auto;border-radius:45px;border:16px solid rgba(185,163,149,.7215686275);box-sizing:border-box;box-shadow:7px 8px 3px -1px #000}.root .header{position:absolute;height:100%;top:0;left:0;right:0;z-index:2;padding-top:10px;text-align:center}.root .header .banner{opacity:1}.root .header .banner .title{margin-top:1.67vh;text-shadow:1px 1px 3px #000;font-family:"Faster One",cursive;font-size:3.5rem;line-height:2.7rem;color:#c60e0e}.root .header .banner .title:nth-child(1){color:#1372c5;font-size:4rem}.root .header .info{position:absolute;bottom:6px;left:6px;right:6px;padding:6px 0 2px;text-align:center;background:rgba(15,75,3,.7411764706);border-radius:25% 25% 23px 23px;border-top:2px solid #15b536;color:#c2e6bb;text-shadow:0 0 1px #13ec72;font-size:.9em;line-height:1em;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;-webkit-backdrop-filter:blur(3px);backdrop-filter:blur(3px)}.root .header .info p{font-family:monospace;display:inline-block}.root .header .info p span{display:block}.root .main{position:absolute;display:block;height:100%;top:0;left:0;right:0;z-index:7}.root .main .select{margin:50% auto 0;padding:11px 0;height:auto;text-align:center;box-shadow:3px 3px 3px -1px #07070a;border:2px outset #636364;background:rgba(182,188,151,.02);-webkit-backdrop-filter:blur(4px);backdrop-filter:blur(4px)}.root .main a.button{border-radius:15px;box-shadow:2px 2px 2px -1px #07070a;display:block;padding:4px 3px 3px;width:115px;color:#f2dfb3;margin:10px auto;background:#666;line-height:30px;font-size:1.4em;cursor:pointer}.root .main a.button.active,.root .main a.button:active{box-shadow:0 0 1px 0px #000;color:#38ec13;background:#23532d;border-color:#000}.root .road{position:relative;height:100%;background-color:#44444d;padding-left:56px;background-image:linear-gradient(to left, #222222 0, #313235 30%, #45444b 60%, #696969 100%)}.root .road .track{box-sizing:border-box;height:200%;border-left:15px double #fff;border-right:15px solid #fff;opacity:.9}.root .road .track::after{box-sizing:border-box;content:"";display:block;border-right:15px dashed #fff;width:55%;height:100%}.root .road .player,.root .road .opponent{position:absolute;bottom:15%;left:0;width:100%;top:15%}.root .road .player .car,.root .road .opponent .car{position:absolute;left:calc(50% - 17.5px - 130px);bottom:calc(50% - 44.5px);width:35px;height:89px;transform-origin:top center;z-index:1;border-radius:12px;box-shadow:-2px 1px 2px 0px #000;background-size:100%}.root .road .player .car{background-image:url(../assets/img/p_car.png)}.root .road .opponent .car{background-image:url(../assets/img/o_car.png)}.root .road .opponent .car:first-child{top:calc(50% + 46.5px);transform:scaleY(-1)}.root .hide{display:none}.root::after{content:"";position:absolute;display:block;top:0;left:0;width:100%;height:100%;z-index:1;border:7px solid #070d0f;box-sizing:border-box;border-radius:30px;background:radial-gradient(circle at center, rgba(255, 255, 255, 0) 75%, rgb(0, 0, 0) 100%)}@media(min-width: 320px)and (max-width: 1024px){.footer{z-index:8;position:absolute;bottom:13%;width:100%;height:10%}.footer .interface{position:relative;margin:0 auto}.footer .interface__steer{font-family:"Courier New",Courier,monospace;width:45px;height:45px;border:none;z-index:8;-webkit-user-select:none;-moz-user-select:none;user-select:none;position:absolute;left:0;top:0;border-radius:50%;border:3px solid rgba(56,236,19,.7411764706);background:rgba(45,112,32,.7607843137)}.footer .interface__steer span{-webkit-user-select:inherit;-moz-user-select:inherit;user-select:inherit;background:rgba(56,236,19,.7411764706);color:none;height:100%;display:block}.footer .interface__steer span:hover{cursor:pointer;background:#fff;color:none;height:100%;display:block}.footer .interface__steer--left{left:12px}.footer .interface__steer--left span{-webkit-clip-path:polygon(80% 20%, 80% 80%, 10% 50%);clip-path:polygon(80% 20%, 80% 80%, 10% 50%)}.footer .interface__steer--right{left:80px}.footer .interface__steer--right span{-webkit-clip-path:polygon(20% 20%, 20% 80%, 90% 50%);clip-path:polygon(20% 20%, 20% 80%, 90% 50%)}.footer .interface__steer--brake{left:calc(100% - 58px)}.footer .interface__steer--brake span{-webkit-clip-path:polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);clip-path:polygon(25% 25%, 75% 25%, 75% 75%, 25% 75%);background:#df0d0d}.root{margin:0 auto}}@font-face{font-family:"Faster One";src:url("../assets/fonts/FasterOne-Regular.ttf") format("embedded-opentype"),url("../assets/fonts/FasterOne-Regular.woff2") format("woff2"),url("../assets/fonts/FasterOne-Regular.woff") format("woff"),url("../assets/fonts/FasterOne-Regular.ttf") format("truetype"),url("../assets/fonts/FasterOne-Regular.ttf") format("svg");font-weight:normal;font-style:normal;font-display:swap}*{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;-webkit-user-select:none;-moz-user-select:none;user-select:none}body{display:flex;height:100vh;box-sizing:inherit;background:radial-gradient(circle at center, rgb(41, 51, 58) 0%, rgb(21, 49, 66) 100%),url(../assets/img/bcg.jpg);background-size:cover;background-position:right;background-blend-mode:saturation;-webkit-backdrop-filter:blur(3px);backdrop-filter:blur(3px);overflow:hidden}body:after{content:"";position:absolute;display:block;width:100vw;height:100vh;z-index:-1;box-sizing:border-box;background:radial-gradient(circle at center, rgba(0, 0, 0, 0) 40%, rgb(27, 27, 27) 100%)}.arrows{color:#000;position:absolute;display:block;bottom:0;left:0;text-align:center;width:100%;color:#ffebcd;background:#000}@media(min-width: 320px)and (max-width: 1024px){.arrows{display:none}}
